<resources>

    <string name="app_name">InventaLux</string>
    <string name="INVENTORY">INVENTORY</string>
    <string name="TextInventory">Keep full control of all your products</string>
    <string name="WELCOME">WELCOME</string>
    <string name="USERLOGIN">USER</string>
    <string name="USERLOGIN2">User</string>
    <string name="PASSWORDLOGIN">Password</string>
    <string name="RECOVERYLOGIN">Are you new user? Register</string>
    <string name="LOGINLOGIN">Login</string>
    <string name="FORGETLOGIN">Forget Password? Recovery it</string>
    <string name="SEARCHINGINVEN">Searching for....</string>
    <string name="PRODUCTINVE">Product Entry</string>
    <string name="PRODUCTOINVEN">Product Output</string>
    <string name="INVENTORYINVE">Inventory</string>
    <string name="SALESINVEN">Sales</string>
    <string name="HOMEINVEN">Home</string>
    <string name="PROFILEINVEN">Profile</string>
    <string name="SUPPORTINVEN">Support</string>
    <string name="SETTINGSINVEN">Settings</string>
    <string name="REGISTERPRODUCT">REGISTER PRODUCT</string>
    <string name="NAMEPRODUCT">Name\n</string>
    <string name="DESCRIPTIONPRO">Description</string>
    <string name="BARCODEINVE">Barcode</string>
    <string name="ITEM1">Paper</string>
    <string name="ITEM2">Pencils</string>
    <string name="ITEM3">Folder</string>
    <string name="CATEGORYPROD">Category/Categoria:</string>
    <string name="SAVEPRODUC">Save</string>
    <string name="OUTPUTPRODU">OUTPUT PRODUCT</string>
    <string name="BARCODEOUT">Barcode</string>
    <string name="NAMEOUT">Name Product</string>
    <string name="BARCODEOUT2">Barcode:</string>
    <string name="BARCODEOUT3">Enter the barcode</string>
    <string name="OUTPUTAMO">Output amount</string>
    <string name="NAMEPRODUOUT">"Enter the name of product "</string>
    <string name="NAMEPRODUCTOUT2">Name of product:</string>
    <string name="BUTTONPRODUCTO">Save\n</string>
    <string name="INVETORYT">INVENTORY</string>
    <string name="BARCODEINVENTORYT">BARCODE</string>
    <string name="NAMEPRODUCTOU">NAME</string>
    <string name="ITEM1INVEN">Folder</string>
    <string name="ITEM2PRODUCTOUT">Pencils</string>
    <string name="ITEM3PRODUCTOUT">Paper</string>
    <string name="ITEM4PRODUCTOUT">Marker</string>
    <string name="AMOUNTPRODUCTOUT">AMOUNT IN WH</string>
    <string name="SOLDPRODUCTOUT">SOLD</string>
    <string name="MOTHYLYSALES">Monthly Sales</string>
    <string name="MONTHLYSALES2">Monthly Sales</string>
    <string name="registrarse" translatable="false">Registrarse</string>
    <string name="nombre_de_la_compa_a" translatable="false">Nombre de la Compañía</string>
    <string name="nombre">Nombre</string>
    <string name="apellido" translatable="false">Apellido</string>
    <string name="contrase_a" translatable="false">Contraseña</string>
    <string name="nombre_de_usuario" translatable="false">Nombre de Usuario</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="todo_2">TODO</string>
    <string name="acepto_los_t_rminos_y_condiciones" translatable="false">Acepto los Términos y Condiciones</string>
    <string name="bienvenido" translatable="false">¡Bienvenido!</string>
    <string name="nombre_producto" translatable="false">nombre</string>
    <string name="stock" translatable="false">stock:</string>
    <string name="valor" translatable="false">valor:</string>
    <string name="salidas" translatable="false">salidas:</string>
    <string name="editar" translatable="false">editar</string>
    <string name="nombre_prod" translatable="false">nombre producto</string>
    <string name="stock_prod" translatable="false">stock producto</string>
    <string name="valor_prod" translatable="false">valor producto</string>
    <string name="editar_agregar" translatable="false">editar o agregar</string>
    <string name="agregar" translatable="false"> agregar</string>
    <string name="registrar" translatable="false"> Registarse</string>
    <string name="txt_user">Usuarios</string>
    <string name="txt_historial">HISTORIAL</string>
    <string name="input_codproducto">Código</string>
    <string name="input_cantidad">Cantidad</string>
    <string name="txt_nombres">Nombre:</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_apellido">Apellido</string>
    <string name="txt_User">Usuario</string>
    <string name="txt_user2">Usuario</string>
    <string name="txt_id2">Id</string>
    <string name="txt_id">Id</string>
    <string name="valor_unitario">valor unitario</string>
    <string name="txt_usuarios">USUARIOS</string>
    <string name="txt_historialf">Historial</string>
    <string name="ID">ID :</string>
    <string name="campoid">0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>