<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="ExtraText">

        <TextView
            android:id="@+id/texto_registrar"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/OUTPUTPRODU"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20dp" />

        <CheckBox
            android:id="@+id/checkBoxBarcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/BARCODEOUT" />

        <CheckBox
            android:id="@+id/checkBoxNombreProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/NAMEOUT" />

        <TextView
            android:id="@+id/textViewCodigoBarras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/BARCODEOUT2" />

        <EditText
            android:id="@+id/editTextCodigoBarras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/BARCODEOUT3"
            android:inputType="text"
            android:minHeight="48dp"
            android:visibility="visible" />


        <TextView
            android:id="@+id/textViewNombreProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/NAMEPRODUCTOUT2"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/editTextNombreProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NAMEPRODUOUT"
            android:inputType="text"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/input_usuario"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_weight="2"
            android:hint="@string/OUTPUTAMO" /><![CDATA[
        />


        ]]>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="314dp">

            <Button
                android:id="@+id/button5"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:background="#ffff"
                android:onClick="nextActivity6"
                android:text="b"
                android:textColor="#757575"
                app:iconTint="#ffff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="51dp"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/bottom_btn1" />

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/BUTTONPRODUCTO"
                tools:layout_editor_absoluteX="145dp"
                tools:layout_editor_absoluteY="36dp"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</FrameLayout>