<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="48dp">


    <TextView
        android:id="@+id/texto_registrar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/REGISTERPRODUCT"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/escaneo_de_codigo_de_barras" />

    <EditText
        android:id="@+id/input_usuario"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:hint="@string/NAMEPRODUCT" />

    <EditText
        android:id="@+id/input_Code"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/input_codproducto" />

    <EditText
        android:id="@+id/input_Quantity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/input_cantidad" />


    <EditText
        android:id="@+id/input_value"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/valor_unitario"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/registrar"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:onClick="cambiarColorTexto1"
        android:text="@string/SAVEPRODUC" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/imageView12"
            android:layout_width="51dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/back_1"
            android:src="@drawable/bottom_btn1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>


