<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:elevation="8dp"
    app:cardCornerRadius="8dp"

    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">


            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="124dp"
                android:layout_height="111dp"
                android:src="@drawable/boximg"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="5dp"
                tools:layout_editor_absoluteY="8dp" />

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="82dp"
                android:layout_height="72dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView14"
                app:layout_constraintEnd_toEndOf="@+id/imageView14"
                app:layout_constraintStart_toStartOf="@+id/imageView14"
                app:layout_constraintTop_toTopOf="@+id/imageView14"
                app:srcCompat="@drawable/usuario__1_" />

            <TextView
                android:id="@+id/txt_nombres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/txt_nombres"
                app:layout_constraintStart_toEndOf="@+id/imageView14"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:text="@string/txt_nombre"
                app:layout_constraintStart_toEndOf="@+id/txt_nombres"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_apellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/txt_apellido"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.067"
                app:layout_constraintStart_toEndOf="@+id/txt_nombre"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_User"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/txt_User"
                app:layout_constraintStart_toEndOf="@+id/imageView14"
                app:layout_constraintTop_toBottomOf="@+id/txt_nombres" />

            <TextView
                android:id="@+id/txt_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_user2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/txt_nombre"
                app:layout_constraintTop_toBottomOf="@+id/txt_nombre" />

            <TextView
                android:id="@+id/txt_id2"
                android:layout_width="20dp"
                android:layout_height="23dp"
                android:layout_marginStart="16dp"
                android:text="@string/txt_id2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView14"
                app:layout_constraintTop_toBottomOf="@+id/txt_User"
                app:layout_constraintVertical_bias="0.604" />

            <TextView
                android:id="@+id/txt_id"
                android:layout_width="23dp"
                android:layout_height="22dp"
                android:layout_marginBottom="12dp"
                android:text="@string/txt_id"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/txt_user" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.cardview.widget.CardView>