<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:elevation="8dp"
    app:cardCornerRadius="8dp"
    tools:context=".ProductFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">


            <TextView
                android:id="@+id/nombre_lista"
                android:layout_width="173dp"
                android:layout_height="28dp"
                android:layout_marginTop="4dp"
                android:text="@string/nombre_producto"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/imageView14"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/stock_lista"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:text="@string/stock"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/imageView14"
                app:layout_constraintTop_toBottomOf="@+id/valor_lista" />

            <TextView
                android:id="@+id/valor_lista"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/valor"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/imageView14"
                app:layout_constraintTop_toBottomOf="@+id/nombre_lista"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/button_editar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="#00FFFFFF"
                android:text="@string/editar"
                android:textColor="@color/black"
                app:cornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/valor_lista" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="124dp"
                android:layout_height="111dp"
                android:src="@drawable/boximg"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="4dp"
                tools:layout_editor_absoluteY="5dp" />

            <TextView
                android:id="@+id/campoValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.011"
                app:layout_constraintStart_toEndOf="@+id/valor_lista"
                app:layout_constraintTop_toBottomOf="@+id/nombre_lista" />

            <TextView
                android:id="@+id/campoStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="4dp"
                android:text="0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.09"
                app:layout_constraintStart_toEndOf="@+id/stock_lista"
                app:layout_constraintTop_toBottomOf="@+id/campoValor" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="salidas:"
                android:textSize="16dp"
                app:layout_constraintStart_toEndOf="@+id/imageView14"
                app:layout_constraintTop_toBottomOf="@+id/stock_lista" />

            <TextView
                android:id="@+id/campoSalida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="0"
                app:layout_constraintStart_toEndOf="@+id/textView17"
                app:layout_constraintTop_toBottomOf="@+id/campoStock" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.cardview.widget.CardView>